--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1711,3 +1711,203 @@
         color: #3A3E4B;
     }
 }
+
+@media (max-width: 500px) {
+    .headerabout__title {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .headerabout p {
+        width: 100%;
+        font-size: 10px;
+        line-height: 20px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .swipers-about .container {
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .swipers-about .container .swiper-container {
+        width: 100%;
+        margin-top: 100px;
+    }
+
+    .swipers-about .container .swiper-container img {
+        width: 100%;
+    }
+
+    .swipers-about .container .swipers-about__left {
+        padding-right: 30px;
+    }
+
+    .swipers-about .container .swipers-about__left .swiper-button-next {
+        right: 10%;
+    }
+
+    .swipers-about .container .swipers-about__left .swiper-pagination {
+        left: 10%;
+    }
+}
+
+@media (max-width: 500px) {
+    .swipers-about {
+        margin-top: 20px;
+    }
+
+    .swipers-about .container .swipers-about__left {
+        margin-left: 0;
+    }
+
+    .swipers-about .container .swipers-about__left h5 {
+        font-size: 28px;
+    }
+
+    .swipers-about .container .swipers-about__left h5 span {
+        display: inline;
+    }
+
+    .swipers-about .container .swiper-container {
+        margin-top: 150px;
+    }
+}
+
+@media (max-width: 400px) {
+    .swipers-about .container .swipers-about__left .swiper-pagination {
+        width: 65%;
+        left: 11%;
+    }
+}
+
+@media (max-width: 1178px) {
+    .aboutinfo .png-abo {
+        display: none;
+    }
+}
+
+@media (max-width: 1100px) {
+    .aboutinfo__content {
+        -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+
+    .aboutinfo__content-right {
+        padding-left: 0;
+        margin: 0 auto;
+        margin-bottom: 20px;
+        padding-top: 20px;
+    }
+
+    .aboutinfo__content-left {
+        width: 100%;
+    }
+
+    .aboutinfo__content-right .top_content {
+        margin-bottom: 40px;
+    }
+
+    .aboutinfo {
+        margin-top: 60px;
+    }
+
+    .aboutinfo__content-right .top_content {
+        width: 100%;
+    }
+
+    .aboutauthor__content {
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .aboutauthor__content .aboutauthor-left {
+        padding-left: 0;
+        margin: 0 auto;
+        margin-bottom: 50px;
+    }
+
+    .aboutauthor {
+        margin-top: 50px;
+    }
+
+    .aboutbottom__content .aboutbottom-left {
+        margin-top: 0;
+    }
+
+    .aboutbottom__content {
+        -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
+    }
+
+    .aboutbottom__content .aboutbottom-right {
+        width: 100%;
+    }
+
+    .aboutbottom__content .aboutbottom-left {
+        padding: 0;
+        margin-top: 50px;
+    }
+
+    .aboutbottom__content .aboutbottom-left img {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .aboutbottom {
+        margin-top: 80px;
+    }
+}
+
+@media (max-width: 768px) {
+    .link-about a {
+        color: white;
+    }
+}
+
+@media (max-width: 600px) {
+    .aboutinfo__content-right {
+        width: 100%;
+    }
+
+    .aboutinfo__content-right .top_content .block-one h6 {
+        font-size: 40px;
+    }
+
+    .aboutinfo__content-right .top_content {
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 500px) {
+    .aboutauthor__content .aboutauthor-left {
+        padding: 0;
+    }
+
+    .aboutauthor__content .aboutauthor-left h5 {
+        font-size: 28px;
+    }
+
+    .aboutauthor__content .aboutauthor-left p {
+        font-size: 15px;
+        padding-left: 25px;
+    }
+
+    .aboutauthor__content .aboutauthor-left p:before {
+        left: 0;
+    }
+
+    .aboutbottom__content .aboutbottom-right .nums .nums-block h6 {
+        font-size: 39px;
+    }
+
+    .aboutbottom__content .aboutbottom-right .nums .nums-block p {
+        font-size: 12px;
+    }
+}
