--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3962,3 +3962,17 @@ main {
 .info-error {
   min-height: 100vh;
 }
+
+.popup__add-photo ul {
+  padding: 0;
+  margin: 20px 0px;
+}
+
+.popup__preview ul {
+  padding: 0;
+}
+
+.popup__preview li {
+  -ms-flex-pack: center;
+      justify-content: center;
+}
