--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1978,3 +1978,30 @@
         order: 2;
     }
 }
+
+@media (max-width: 700px) {
+    .swipers .swiper-container .swiper-wrapper {
+        min-height: 100vh;
+        max-height: 600px;
+    }
+
+    .swipers {
+        min-height: 100vh;
+        max-height: 600px;
+    }
+
+    .swipers .swiper-container .swiper-button-prev,
+  .swipers .swiper-container .swiper-button-next {
+        top: 150px;
+    }
+
+    .swipers .swiper-container .swiper-pagination {
+        top: 149px;
+    }
+}
+
+@media (max-width: 600px) {
+    .one-projects {
+        min-height: 100vh;
+    }
+}
